# tender_agents_amp

./: .gitignore  README.md  pyproject.toml
src/tender_agents_amp/: crew.py  main.py
src/tender_agents_amp/config/: agents.yaml  tasks.yaml
